--- a/project_/includes/footer.html
+++ b/project_/includes/footer.html
@@ -47,7 +47,7 @@
                     <li><a href="https://www.facebook.com/hai.huynhngoc.12382/" class="special">Buy me a coffee <i
                                 class="fa-solid fa-heart"></i></a></li>
                 </ol>
-                <img src="/asets/images/image-one.jpg" />
+                <img src="../asets/images/image-one.jpg" />
             </div>
         </div>
         <hr>
