--- a/project_/includes/header.html
+++ b/project_/includes/header.html
@@ -9,13 +9,12 @@
             </div>
             <nav class="inner-menu">
                 <ol>
-                    <li><a href="https://hoaithu222.github.io/f8_offline_k8/project_/pages/home.html" class="active"
-                            target="_blank">HOME</a></li>
-                    <li><a href="https://hoaithu222.github.io/f8_offline_k8/project_/pages/ranking.html">KMA RANKING</a>
+                    <li><a href="/f8_offline_k8/project_/pages/home.html" class="active" target="_blank">HOME</a></li>
+                    <li><a href="/f8_offline_k8/project_/pages/ranking.html">KMA RANKING</a>
                     </li>
-                    <li><a href="https://hoaithu222.github.io/f8_offline_k8/project_/pages/subject.html">SUBJECTS
+                    <li><a href="/f8_offline_k8/project_/pages/subject.html">SUBJECTS
                             VIRTUAL FILTER</a></li>
-                    <li><a href="https://hoaithu222.github.io/f8_offline_k8/project_/pages/schedule.html">KMA
+                    <li><a href="/f8_offline_k8/project_/pages/schedule.html">KMA
                             SCHEDULE</a></li>
                 </ol>
             </nav>
