--- a/project_/includes/header.html
+++ b/project_/includes/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="inner-wrap">
             <div class="inner-logo">
-                <a href="/pages/home.html">
+                <a href="/f8_offline_k8/project_/pages/home.html">
                     <h3>KMA LEGEND</h3>
                     <p>MR.CODE WALKER</p>
                 </a>
