--- a/project_/asets/css/footer.css
+++ b/project_/asets/css/footer.css
@@ -181,4 +181,26 @@
     }
 }
 
+@media screen and (max-width: 576px) {
+    .footer .inner-foot {
+        flex-wrap: wrap;
+        padding: 0 9rem;
+
+    }
+
+    .footer .inner-foot .inner-menu {
+        width: 100%;
+    }
+
+    .footer .inner-foot .inner-menu ol {
+        display: block;
+
+    }
+
+    .footer .inner-foot .inner-menu ol li {
+        margin: 1rem 0;
+    }
+ 
+}
+
 /*end footer*/
