--- a/homework/Day-29/css/ex01.css
+++ b/homework/Day-29/css/ex01.css
@@ -36,6 +36,11 @@ button {
     cursor: pointer;
 }
 
+button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
 .prev {
     left: 10px;
 }
