--- a/homework/Day-28/css/ex01.css
+++ b/homework/Day-28/css/ex01.css
@@ -16,7 +16,6 @@ ul {
 input {
     border: none;
     outline: none;
-
 }
 
 button {
@@ -32,8 +31,6 @@ button {
     padding: 50px;
     text-align: center;
     border-radius: 10px;
-
-
 }
 
 .box h1 {
@@ -48,7 +45,6 @@ button {
     border: 1.5px solid #8758FF;
     justify-content: space-between;
     margin-bottom: 30px;
-
 }
 
 .box .inner-form input {
@@ -66,13 +62,11 @@ button {
     padding: 0 10px;
 }
 
-.box .inner-list .menu {
+.box .inner-list .task-menu {
     width: 100%;
-
-
 }
 
-.box .inner-list .menu .inner-item {
+.box .inner-list .task-menu .inner-item {
     display: flex;
     background-color: #8758FF;
     border-radius: 5px;
@@ -82,19 +76,20 @@ button {
     margin-bottom: 10px;
 }
 
-.box .inner-list .menu .inner-item p {
+.box .inner-list .task-menu .inner-item p {
     width: 90%;
     text-align: left;
 }
 
-.box .inner-list .menu .inner-item .inner-icon {
+.box .inner-list .task-menu .inner-item .inner-icon {
     width: 10%;
     display: flex;
     justify-content: space-between;
 }
 
-.box .inner-list .menu .inner-item .inner-icon i {
+.box .inner-list .task-menu .inner-item .inner-icon i {
     font-size: 18px;
+    cursor: pointer;
 }
 
 .inner-name.completed {
